cambios en registro y ayuda

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -56,6 +56,7 @@
 	<script src="lib/svg-morpheus/compile/minified/svg-morpheus.js"></script>
 	<script src="lib/material-design-lite/material.min.js"></script>
 	<script src="lib/moment/moment.js"></script>
+	<script src="lib/moment/locale/es.js"></script>
 	<script src="lib/mdPickers/dist/mdPickers.js"></script>
 	<script src="lib/angular-material-expansion-panel/dist/md-expansion-panel.js"></script>
 	<script src="lib/ngMorph/dist/angular-morph.min.js"></script>
