cambios para registro y se añaden mas funciones

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -81,6 +81,7 @@
 	<script src="/scripts/controllers/busquedaCtrl.js"></script>       
 	<script src="/scripts/controllers/detalleCtrl.js"></script>       
 	<script src="/scripts/controllers/estadisticasCtrl.js"></script>       
+	<script src="/scripts/controllers/formatosCtrl.js"></script>       
 	<script src="/scripts/controllers/homeCtrl.js"></script>       
 	<script src="/scripts/controllers/loginCtrl.js"></script>       
 	<script src="/scripts/controllers/registroCtrl.js"></script>       
