casi terminada etapa 1
ya esta lista las imagenes con estatus en cada imagen

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -88,6 +88,7 @@
 	<script src="/scripts/controllers/registroCtrl.js"></script>       
 	<script src="/scripts/directives/arrastrar.js"></script>       
 	<script src="/scripts/directives/atras.js"></script>       
+	<script src="/scripts/directives/bloqueoCaracter.js"></script>       
 	<script src="/scripts/directives/expand.js"></script>       
 	<script src="/scripts/directives/folioMV.js"></script>       
 	<script src="/scripts/directives/imagenes.js"></script>       
