se agrega principio de solicitud

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -5,9 +5,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<title>SACE MV 1.0</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic"/>
-	<link rel="icon" type="image/png" href="img/favicon.png" />
+	
+	<!-- TODO add manifest here -->
+  	<link rel="manifest" href="/manifest.json">
 
+	<!-- Add to home screen for Safari on iOS -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="SACE MV">
+	<link rel="apple-touch-icon" href="img/icons/icon-152x152.png">
+	<meta name="msapplication-TileImage" content="img/icons/icon-144x144.png">
+	<meta name="msapplication-TileColor" content="#3f51b5">
+	
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic"/>
+	
+	<link rel="icon" type="image/png" href="img/favicon.png" />
 	<!-- build:css css/style.min.css -->
 
 	<!-- bower:css -->
@@ -36,8 +48,7 @@
 </head>
 <body>
 
-	<ui-view class="base central" layout="column" md-theme="{{ tema }}" md-theme-watch></ui-view>
-
+	<ui-view class="base" md-theme="{{ tema }}" md-theme-watch layout="column" flex></ui-view>
 	
 	<!-- build:js js/vendor.min.js -->
 	<!-- bower:js -->
@@ -90,6 +101,7 @@
 	<script src="/scripts/controllers/homeCtrl.js"></script>       
 	<script src="/scripts/controllers/loginCtrl.js"></script>       
 	<script src="/scripts/controllers/registroCtrl.js"></script>       
+	<script src="/scripts/controllers/solicitudAutorizacionCtrl.js"></script>       
 	<script src="/scripts/directives/arrastrar.js"></script>       
 	<script src="/scripts/directives/atras.js"></script>       
 	<script src="/scripts/directives/bloqueoCaracter.js"></script>       
