--- a/client/app/index.html
+++ b/client/app/index.html
@@ -9,6 +9,10 @@
 	<!-- TODO add manifest here -->
   	<link rel="manifest" href="/manifest.json">
 
+  	<link rel="icon" type="image/png" href="img/icons/icon-72x72.png" />
+
+  	<meta name="mobile-web-app-capable" content="yes">
+
 	<!-- Add to home screen for Safari on iOS -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -18,8 +22,7 @@
 	<meta name="msapplication-TileColor" content="#3f51b5">
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic"/>
-	
-	<link rel="icon" type="image/png" href="img/favicon.png" />
+
 	<!-- build:css css/style.min.css -->
 
 	<!-- bower:css -->
@@ -94,6 +97,7 @@
 	<script src="/scripts/components/toolbar.js"></script>       
 	<script src="/scripts/controllers/ayudaCtrl.js"></script>       
 	<script src="/scripts/controllers/busquedaCtrl.js"></script>       
+	<script src="/scripts/controllers/cancelacionCtrl.js"></script>       
 	<script src="/scripts/controllers/detalleCtrl.js"></script>       
 	<script src="/scripts/controllers/documentosCtrl.js"></script>       
 	<script src="/scripts/controllers/estadisticasCtrl.js"></script>       
@@ -112,6 +116,7 @@
 	<script src="/scripts/directives/money.js"></script>       
 	<script src="/scripts/directives/morph.js"></script>       
 	<script src="/scripts/directives/numero.js"></script>       
+	<script src="/scripts/directives/portada.js"></script>       
 	<script src="/scripts/services/authService.js"></script>       
 	<script src="/scripts/services/ayudaService.js"></script>       
 	<script src="/scripts/services/busquedaService.js"></script>       
