codigos para factura

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -106,6 +106,7 @@
 	<script src="/scripts/controllers/loginCtrl.js"></script>       
 	<script src="/scripts/controllers/registroCtrl.js"></script>       
 	<script src="/scripts/controllers/solicitudAutorizacionCtrl.js"></script>       
+	<script src="/scripts/controllers/visorCtrl.js"></script>       
 	<script src="/scripts/directives/arrastrar.js"></script>       
 	<script src="/scripts/directives/atras.js"></script>       
 	<script src="/scripts/directives/bloqueoCaracter.js"></script>       
