--- a/client/app/index.html
+++ b/client/app/index.html
@@ -100,6 +100,7 @@
 	<script src="/scripts/controllers/formatosCtrl.js"></script>       
 	<script src="/scripts/controllers/homeCtrl.js"></script>       
 	<script src="/scripts/controllers/loginCtrl.js"></script>       
+	<script src="/scripts/controllers/notaMedicaCtrl.js"></script>       
 	<script src="/scripts/controllers/registroCtrl.js"></script>       
 	<script src="/scripts/controllers/solicitudAutorizacionCtrl.js"></script>       
 	<script src="/scripts/directives/arrastrar.js"></script>       
